# cuteocean

./: CMakeLists.txt  README.md
include/: algae.hpp  entity.hpp  fish.hpp  global.hpp  herbivore.hpp  logger.hpp  predator.hpp
src/: algae.cpp  entity.cpp  fish.cpp  global.cpp  herbivore.cpp  logger.cpp  main.cpp  predator.cpp
